<resources>
    <string name="app_name">Pagamento de Compras</string>

    <string name="textoEscolhaProduto">Escolha seu produto:</string>

    <string name="produtoArroz">Arroz (R$3,50)</string>
    <string name="produtoCarne">Carne (R$12,30)</string>
    <string name="produtoPao">Pão (R$2,20)</string>
    <string name="produtoLeite">Leite (R$5,50)</string>
    <string name="produtoOvos">Ovos (R$7,50)</string>

    <string name="botaoTotal">Total</string>
    <string name="textoValor">Valor: </string>

    <string name="textoDesconto">Algum desconto?</string>
    <string name="semDesconto">Sem desconto</string>
    <string name="descontoCinco">5%</string>
    <string name="descontoDez">10%</string>
    <string name="descontoQuinze">15%</string>

    <string name="valorPago">Valor pago pelo cliente</string>

    <string name="botaoEfetuarPagamento">Efetuar pagamento</string>
</resources>